# ChangeLog for games-roguelike/scourge
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/games-roguelike/cvs-repo/gentoo-x86/games-roguelike/scourge/ChangeLog,v 1.32 2008/12/30 15:25:56 mr_bones_ Exp $

*scourge-0.21.1 (30 Dec 2008)

  30 Dec 2008; Michael Sterrett <mr_bones_@gentoo.org>
  +scourge-0.21.1.ebuild:
  version bump

*scourge-0.21 (20 Dec 2008)

  20 Dec 2008; Michael Sterrett <mr_bones_@gentoo.org> +scourge-0.21.ebuild:
  version bump

*scourge-0.20 (29 Aug 2008)

  29 Aug 2008; <tupone@gentoo.org> +files/scourge-0.20-gcc43.patch,
  +scourge-0.20.ebuild:
  Version bump to 0.20. Bug #222667 by Rob Hillis
  Editor removed as not working

  07 Oct 2007; Michael Sterrett <mr_bones_@gentoo.org> scourge-0.19.ebuild:
  add sdl-ttf to the deps for bug #195011

*scourge-0.19 (05 Oct 2007)

  05 Oct 2007; Michael Sterrett <mr_bones_@gentoo.org> +scourge-0.19.ebuild:
  version bump

  28 Sep 2007; Ryan Hill <dirtyepic@gentoo.org> scourge-0.18.ebuild:
  Lock wxGTK to 2.6.

  13 Jun 2007; Tristan Heaven <nyhm@gentoo.org>
  +files/scourge-0.18-gcc42.patch, scourge-0.18.ebuild:
  Patch for gcc-4.2

*scourge-0.18 (01 Jun 2007)

  01 Jun 2007; Tristan Heaven <nyhm@gentoo.org> +scourge-0.18.ebuild:
  Version bump, bug #177204

*scourge-0.17 (15 Jan 2007)

  15 Jan 2007; Tristan Heaven <nyhm@gentoo.org> +scourge-0.17.ebuild:
  Version bump

*scourge-0.16 (13 Nov 2006)

  13 Nov 2006; Tristan Heaven <nyhm@gentoo.org> -scourge-0.14.ebuild,
  +scourge-0.16.ebuild:
  Version bump

*scourge-0.15 (29 Sep 2006)

  29 Sep 2006; Tristan Heaven <nyhm@gentoo.org> +scourge-0.15.ebuild:
  Version bump, bug #144411

*scourge-0.14 (13 Jun 2006)

  13 Jun 2006; Michael Sterrett <mr_bones_@gentoo.org> +scourge-0.14.ebuild:
  version bump

*scourge-0.13 (01 Jun 2006)

  01 Jun 2006; <Tupone@gentoo.org> +files/scourge-0.13-gcc41.patch,
  +scourge-0.13.ebuild:
  Version bump, bug #126279 by Cristiano Chiucchiolo
