@@ -1,5 +1,5 @@
 DIST scourge-0.21.1.data.tar.gz 142093436 RMD160 6d1af713e2e6f84cc54b0ccdc2e8924734031c46 SHA1 c3eb246f3598f2282f71e47b9ea2031ff3eda75e SHA256 13f33735ff814eb465d95355dcaaf2cdd16a3329f85aeab1a97ad40919cd1f12
 DIST scourge-0.21.1.src.tar.gz 8146157 RMD160 f6d1d0b5145bfc62b90673e14e35193671389318 SHA1 d5742d78e2efad7f9b63cfb958e950f9608d310c SHA256 e5d3dc784bc117a3fe2f4449c74cb896310760ae5a82a50f8c1045705416cef3
-EBUILD scourge-0.21.1.ebuild 1184 RMD160 5b8f656209c25c513ff65119de3ffd6def6e70fa SHA1 9e648352a369c6a1e846710163a531dbc0f1953a SHA256 d9165db38f41b50d27908ee27905fd7ca0bdb78726fd449841c9d654110b9589
-MISC ChangeLog 4038 RMD160 6a5284428aff2d057a9d64f489876e223338f9c5 SHA1 c5cbead0f247e2aa857c3e57cccac3c21ae7e719 SHA256 55a3681fadf3b8651db6ec169a920abe9f2b38226c9efdd06865069f7e3fe03f
+EBUILD scourge-0.21.1.ebuild 1340 RMD160 24cf96f4120614a9617a55cb7ff0c2aaf04f0114 SHA1 1722b77b05aff9fa77822a5ceee60dee54fb82b3 SHA256 8de0b0475094992c17623b256a6a71ca2e7c2227ada5a8e480038cb420947f54
+MISC ChangeLog 4164 RMD160 830d3619766953f56d052b96ae55290b070196a1 SHA1 8ce42bf834ed83cd6c726a46fdeba5057938017a SHA256 8600106cc90ba14b5095c8749e591eadf62d49fb0313eed851ac5544165d7d79
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
