@@ -1,8 +1,9 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-roguelike/cvs-repo/gentoo-x86/games-roguelike/scourge/scourge-0.21.1.ebuild,v 1.1 2008/12/30 15:25:56 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-roguelike/cvs-repo/gentoo-x86/games-roguelike/scourge/scourge-0.21.1.ebuild,v 1.2 2009/03/08 06:44:58 mr_bones_ Exp $
 
-inherit eutils wxwidgets games
+EAPI=2
+inherit autotools eutils wxwidgets games
 
 DESCRIPTION="A graphical rogue-like adventure game"
 HOMEPAGE="http://scourgeweb.org/"
@@ -16,10 +17,10 @@ IUSE=""
 
 RDEPEND="virtual/glu
 	virtual/opengl
-	>=media-libs/freetype-2
-	media-libs/libsdl
+	media-libs/freetype:2
+	media-libs/libsdl[joystick]
 	media-libs/sdl-net
-	media-libs/sdl-mixer
+	media-libs/sdl-mixer[vorbis]
 	media-libs/sdl-ttf
 	virtual/libintl"
 DEPEND="${RDEPEND}
@@ -27,13 +28,20 @@ DEPEND="${RDEPEND}
 
 S=${WORKDIR}/${PN}
 
-src_compile() {
+src_prepare() {
+	# bug #257601
+	sed -i \
+		-e '/AC_CHECK_HEADERS.*glext/ s:):, [#include <GL/gl.h>] ):' \
+		configure.in \
+		|| die "sed failed"
+	eautoreconf
+}
+
+src_configure() {
 	egamesconf \
 		--disable-dependency-tracking \
 		--with-data-dir="${GAMES_DATADIR}"/${PN} \
-		--localedir=/usr/share/locale \
-		|| die
-	emake || die "emake failed"
+		--localedir=/usr/share/locale
 }
 
 src_install() {
